// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Border Radius should render 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  border-radius: 0.125rem;
}

.c1 {
  display: block;
  border-radius: 0.125rem;
}

<div>
  <div
    class="c0 c1"
    data-testid="block"
  >
    Default Text
  </div>
</div>
`;

exports[`Colors should render 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
  background-color: #0694a2;
}

.c1 {
  display: block;
  background-color: #0694a2;
}

<div>
  <div
    class="c0 c1"
    data-testid="block"
  >
    Default Text
  </div>
</div>
`;
